@@ -1,6 +1,6 @@
 /*
  * DBeaver - Universal Database Manager
- * Copyright (C) 2010-2024 DBeaver Corp and others
+ * Copyright (C) 2010-2025 DBeaver Corp and others
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -22,6 +22,7 @@ import org.eclipse.core.runtime.MultiStatus;
 import org.eclipse.core.runtime.Status;
 import org.eclipse.core.runtime.jobs.Job;
 import org.jkiss.code.NotNull;
+import org.jkiss.code.Nullable;
 import org.jkiss.dbeaver.DBException;
 import org.jkiss.dbeaver.Log;
 import org.jkiss.dbeaver.ModelPreferences;
@@ -38,13 +39,10 @@ import java.util.ArrayList;
 import java.util.List;
 
 /**
- * Abstract Database Job
+ * Abstract job
  */
-public abstract class AbstractJob extends Job
-{
+public abstract class AbstractJob extends Job {
     private static final Log log = Log.getLog(AbstractJob.class);
-
-    public static final int TIMEOUT_BEFORE_BLOCK_CANCEL = 250;
 
     private DBRProgressMonitor progressMonitor;
     private volatile boolean finished = false;
@@ -58,7 +56,7 @@ public abstract class AbstractJob extends Job
     // It happens if some other AbstractJob runs in sync mode
     protected final static ThreadLocal<AbstractJob> CURRENT_JOB = new ThreadLocal<>();
 
-    protected AbstractJob(String name)
+    protected AbstractJob(@NotNull String name)
     {
         super(name);
     }
@@ -75,18 +73,11 @@ public abstract class AbstractJob extends Job
         this.skipErrorOnCanceling = skipErrorOnCanceling;
     }
 
-    protected Thread getActiveThread()
-    {
-        final Thread thread = getThread();
-        return thread == null ? Thread.currentThread() : thread;
-    }
-
-    public void setAttachedJob(AbstractJob attachedJob) {
+    public void setAttachedJob(@Nullable AbstractJob attachedJob) {
         this.attachedJob = attachedJob;
     }
 
-    public final IStatus runDirectly(DBRProgressMonitor monitor)
-    {
+    public final IStatus runDirectly(@NotNull DBRProgressMonitor monitor) {
         progressMonitor = monitor;
         blockCanceled = false;
         runDirectly = true;
@@ -105,8 +96,8 @@ public abstract class AbstractJob extends Job
     }
 
     @Override
-    protected final IStatus run(IProgressMonitor monitor)
-    {
+    @NotNull
+    protected final IStatus run(@NotNull IProgressMonitor monitor) {
         progressMonitor = RuntimeUtils.makeMonitor(monitor);
         blockCanceled = false;
         CURRENT_JOB.set(this);
@@ -137,7 +128,7 @@ public abstract class AbstractJob extends Job
         schedule(delay.toMillis());
     }
 
-    private boolean logErrorStatus(IStatus status) {
+    private boolean logErrorStatus(@NotNull IStatus status) {
         if (status.getException() != null) {
             log.error("Error during job '" + getName() + "' execution", status.getException());
             return true;
@@ -151,7 +142,8 @@ public abstract class AbstractJob extends Job
         return false;
     }
 
-    protected abstract IStatus run(DBRProgressMonitor monitor);
+    @NotNull
+    protected abstract IStatus run(@NotNull DBRProgressMonitor monitor);
 
     public boolean isCanceled() {
         return cancelTimestamp > 0;
@@ -162,8 +154,7 @@ public abstract class AbstractJob extends Job
     }
 
     @Override
-    protected void canceling()
-    {
+    protected void canceling() {
         if (cancelTimestamp == -1) {
             cancelTimestamp = System.currentTimeMillis();
         }
@@ -193,7 +184,7 @@ public abstract class AbstractJob extends Job
             return;
         }
 
-        final DBRBlockingObject lastBlock = activeBlocks.remove(activeBlocks.size() - 1);
+        final DBRBlockingObject lastBlock = activeBlocks.removeLast();
 
         try {
             new JobCanceler(lastBlock).schedule();
@@ -204,11 +195,8 @@ public abstract class AbstractJob extends Job
 
         if (!activeBlocks.isEmpty()) {
             DBPPreferenceStore preferenceStore;
-            if (activeBlocks.get(0) instanceof DBCSession) {
-                DBPDataSource dataSource = ((DBCSession) activeBlocks.get(0)).getDataSource();
-                if (dataSource == null) {
-                    return;
-                }
+            if (activeBlocks.getFirst() instanceof DBCSession session) {
+                DBPDataSource dataSource = session.getDataSource();
                 preferenceStore = dataSource.getContainer().getPreferenceStore();
             } else {
                 preferenceStore = DBWorkbench.getPlatform().getPreferenceStore();
@@ -227,7 +215,7 @@ public abstract class AbstractJob extends Job
                     @Override
                     protected IStatus run(IProgressMonitor monitor) {
                         if (!finished) {
-                            DBRBlockingObject nextBlock = activeBlocks.remove(activeBlocks.size() - 1);
+                            DBRBlockingObject nextBlock = activeBlocks.removeLast();
                             new JobCanceler(nextBlock).schedule();
                             if (!activeBlocks.isEmpty()) {
                                 schedule(cancelCheckTimeout);
@@ -253,8 +241,8 @@ public abstract class AbstractJob extends Job
         }
 
         @Override
-        protected IStatus run(IProgressMonitor monitor)
-        {
+        @NotNull
+        protected IStatus run(@NotNull IProgressMonitor monitor) {
             if (!finished) {
                 try {
                     BlockCanceler.cancelBlock(progressMonitor, block);
